# pipeline_aws_price

./: README.md  pipeline_aws_pricing.ipynb  pyproject.toml  requirements.txt
data/: custos_aws_ec2_on_demand.csv
results/: dados_tratados.csv  insights.md  resultados.csv
src/: extrair_dados_brutos.py  extrair_precos_ec2.py  teste_aws_pricing.py
